# WaveLogic

./: CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/include/: WaveLogic.h
core/shaders/: shader.fs  shader.vs
core/src/: WaveLogic.cpp
examples/opengl_renderer/: CMakeLists.txt  main.cpp
examples/opengl_renderer/include/: CubeGen.hpp  Shader.hpp
examples/opengl_renderer/include/glad/: glad.h
examples/opengl_renderer/shaders/: sphere.fs  sphere.vs
examples/opengl_renderer/src/: Shader.cpp  glad.c
